kube-ops-view/ingressroute/kubeops-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: yopass-http
  namespace: tools
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`kubeopsview.k8s.lenin.nu`)
    kind: Rule
    middlewares:
    - name: httpsredirect
    services:
    - name: kube-ops-view
      port: 80
      namespace: tools
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: yopass-https
  namespace: tools
spec:
  entryPoints:
    - websecure
  tls:
    secretName: 
  routes:
  - match: Host(`kubeopsview.k8s.lenin.nu`)
    kind: Rule
    services:
    - name: kube-ops-view
      port: 80
      namespace: tools
